Release history for JooseX.Namespace.Depended

{{ $NEXT }}

    - various docs updates
    
    - NodeJS transport made synchronous
    - uncommented tests for dependencies in "Lazy" classes on NodeJS platform
    
    - JooseX.Meta.Lazy excluded from the `Auto` bundle (was only required for testing) 
    - JooseX.SimpleRequest included into the `Web` bundle
    
    - `use.paths` is now the preferred way to specify the INC paths instead of JooseX.Namespace.Depended.Manager.my.INC
       using JooseX.Namespace.Depended.Manager.my.INC is still supported but will be removed in some of the future releases
       
    - improved <script> transport (still unreliable on IE)
    - switched to 'ScriptTag' as a default materialization for Web
    
    - added 'async' attribute for <script> transport
      w/o this attribute the <script>s used for transporting could interfere with <script>s used for materialization which 
      caused test failures in FF
      
    - now can handle dependencies from the 'has' section of class declaration:
    
        Class('SomeClass', {
        
            has : {
                attr : {
                    meta    : 'Attribute.Meta',
                    trait   : 'Attribute.Trait'
                }
            }
        })
      
    

0.11      2010-11-01 13:19

    - re-release on `npm`, no functional changes

0.10      2010-10-05 12:35

    - re-release with fixes in package.json, no functional changes

0.09      2010-09-22 00:27

    - 'todo' dir renamed to 'misc' to work on case-insesitive platforms

0.08      2010-09-10 15:10

    - added `Task.JooseX.Namespace.Depended.Auto` bundle, which autoconfigurate depending from the
      platform (browser/nodejs)

0.07      2010-08-31 15:36

    - really fixed NodeJS materialization

0.06      2010-08-31 15:16

    - implemented "Delayed dependencies" feature
    
    - refactored out 'inturl/exturl' resources
    - refactored out "Locator.URL" role
    