@@ -72,7 +72,6 @@ You can use already implemented set of roles:
     
 > - [JooseX.Namespace.Depended.Materialize.Eval](Materialize/Eval.html) - materialization mode, which evalutes the passed blob in the `Joose.top` scope
 > - [JooseX.Namespace.Depended.Transport.XHRAsync](Transport/XHRAsync.html) - tranport, which uses the asynchronous XHR to fetch the content of resource
-> - [JooseX.Namespace.Depended.Transport.XHRAsync](Transport/XHRSync.html) - tranport, which uses the synchronous XHR to fetch the content of resource
 > - [JooseX.Namespace.Depended.Transport.ScriptTag](Transport/ScriptTag.html) - tranport, which uses the &lt;script&gt; tag to fetch the content of resource
  
 See the [Synopsis][] for example
